Update to 24w14a and Java 21